tdf#158826 rtfimport: ignore page break before document starts

This avoids a 24.2 exposed bug from my
commit 016f779ee6c7f601be3ae19dc57497e63a5bf817

RTF import simply cannot be relied upon to create paragraphs
where they need to be. A side effect of fixing frames
is that spurious paragraphs can be created,
and if a frame starts the document, then an otherwise
ignored page break can be attached to the second paragraph
and thus become exposed.

This seems pretty much like the RTF implementation of
what was done for DOC and DOCX for tdf#118711.
At least it is related.

make CppunitTest_sw_rtfexport8 CPPUNIT_TEST_NAME=testTdf158826_extraCR

The following unit tests trigger this code (with no visible change)
abi10076.odt  tdf121623.rtf  tdf129513.rtf  tdf131963.docx

Change-Id: I21afa826b6f6fbb735591603a0620b8b47de517e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161374
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>